Changes to CSS and HTML

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 <body id="body">
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" id="navBtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#main">Home</a>
         <a href="#sect2">Welcome To Brazz</a>
-        <a href="#sect3">Project/Essay from Another Class - Page 3</a>
+        <a href="#sect3">Long Walk To Freedom</a>
         <a href="#sect4">Pasadena Fire Explorers</a>
     </div>
 
@@ -33,11 +33,9 @@
 
         <h1 class="sideHeader">App Academy</h1>
 
-        <p>The greatest of my 2018 App Academy projects would be my p5-programmed video game. Titled "Brass Blast", the game is a hybrid of classic ball shooter games and drop games. The game is inspired by jazz themes, including sounds from jazz culture (cymbols, brass, beats, etc.) Also installed into the game is a jazz-inspired color palette, furthering the overall theme of the music genre. The game itself is simple: you are a ball, attempting to hit a moving block. If the ball collides with the block, you get a point! If you miss, you lose a life. </p>
+        <p>The greatest of my 2018 App Academy projects would be my p5-programmed video game. Titled "Brass Blast", the game is a hybrid of classic ball shooter games and drop games. The game is inspired by jazz themes, including sounds from jazz culture (cymbols, brass, beats, etc.) Also installed into the game is a jazz-inspired color palette, furthering the overall theme of the music genre. The game itself is simple: you are a ball, attempting to hit a moving block. If the ball collides with the block, you get a point! If you miss, you lose a life. Survive as long as you can!</p>
 
-    </div>
-
-    <button id="gameLink" href="p5problemset/problem_3.html">Welcome To Brazz</button>
+        <button id="gameLink" href="p5problemset/problem_3.html">Welcome To Brazz</button>
 
     </div>
 
@@ -48,8 +46,8 @@
 
         <h1 class="sideHeader">"Long Walk To Freedom"</h1>
 
-        <p>Another one of favorite projects was from AP English Literature and Composition of 2017. As an extra credit opportunity, the teacher required a fully anotated version of a book we requested to read about.
-            <br />Truly, this challenging experience reflects my unbreaking attitude when it comes to large projects. My perseverance had excelled my once cautious boundaries.</p>
+        <p>Another one of favorite projects was from AP English Literature and Composition of 2017. As an extra credit opportunity, the teacher required a fully anotated version of a book we requested to read about. I chose to anotate "Long Walk To Freedom" by Nelson Mandela, as I was interested in the challenge of 600 pages. As I began to read the novel, I became amazed at the life of one of the most insprational South African leaders in history. Although it does contain some biased opinions on politics and policies, the novel follows Nelson Mandela on his quest to free South Africa from fascist, white supremacist aparteid.</p>
+        <p>Although this story was truly interesting, an obstacle laid in my path for extra credit: THE DEADLINE. I had three months to complete the six-hundred-paged book. Due to personal foolishness, I ultimately left myself one month to complete five hundred and fifty pages. So, with swift determination to keep a good grade in my English class, I got to work. I worked every day, even till the morning of the deadline to complete this behemoth of an assignment. Truly, this challenging experience reflects my unbreaking attitude when it comes to large projects. My perseverance had excelled my once cautious boundaries.</p>
     </div>
 
     <!--  Fire Explorer Parallax  -->
@@ -60,6 +58,7 @@
         <h1 class="sideHeader">Pasadena Fire Explorers</h1>
 
         <p>Jointly established by the Pasadena Fire Department and the Boy Scouts of America, the Pasadena Fire Explorers is a volunteer service program where youths are trained by firefighters to become firefighters. Serving for over three years, I have immense respect and appreciation for this program.</p>
+        <p>In Fire Explorers, we practice constant training. We've covered fire operations, search and rescue techniques, ropes and knots, salvage and overhaul activities, and extrication operations. Besides that, we work local community service opportunities, such as Rose Bowl events, fire station open houses and pancake breakfasts. On top of all these ventures, we strive to compete with fellow Explorer posts through the local Explorer Muster.</p>
     </div>
 
     <script src="p5.min.js"></script>
