--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <p>The greatest of my 2018 App Academy projects would be my p5-programmed video game. Titled "Brass Blast", the game is a hybrid of classic ball shooter games and drop games. The game is inspired by jazz themes, including sounds from jazz culture (cymbols, brass, beats, etc.) Also installed into the game is a jazz-inspired color palette, furthering the overall theme of the music genre. The game itself is simple: you are a ball, attempting to hit a moving block. If the ball collides with the block, you get a point! If you miss, you lose a life. Survive as long as you can!</p>
 
-        <button id="gameLink" href="p5problemset/problem_3.html">Welcome To Brazz</button>
+        <a id="gameLink" onclick="Brazz()">Welcome To Brazz</a>
 
     </div>
 
